--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
 <!-- Div For Navigation Menu -->
-  <div class="container-fluid">
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-center">
       <a class="navbar-brand" href="#">Space</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -59,100 +59,97 @@
         </ul>
       </div>
     </nav>
-  </div>
+
 <!-- Div For Main Carousel -->
-  <div class="container-fluid">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <!-- indicators -->
-      <ol class="carousel-indicators">
-       <li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
-       <li data-target="#carouselExampleSlidesOnly" data-slide-to="1"></li>
-       <li data-target="#carouselExampleSlidesOnly" data-slide-to="2"></li>
-      </ol>
-      <!-- indicators -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="nature.jpg" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Heading</h5>
-            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="nature.jpg" alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Heading</h5>
-            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="nature.jpg" alt="Third slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Heading</h5>
-            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
-          </div>
-        </div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <!-- indicators -->
+  <ol class="carousel-indicators">
+   <li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
+   <li data-target="#carouselExampleSlidesOnly" data-slide-to="1"></li>
+   <li data-target="#carouselExampleSlidesOnly" data-slide-to="2"></li>
+  </ol>
+  <!-- indicators -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="nature.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Heading</h5>
+        <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
       </div>
-
-      <!-- previous and next buttons -->
-      <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
-       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-       <span class="sr-only">Previous</span>
-     </a>
-     <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
-       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-       <span class="sr-only">Next</span>
-     </a>
-
-     <!-- end of next buttons  -->
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="nature.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Heading</h5>
+        <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="nature.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Heading</h5>
+        <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
+      </div>
     </div>
   </div>
+
+  <!-- previous and next buttons -->
+  <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   <span class="sr-only">Previous</span>
+ </a>
+ <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+   <span class="sr-only">Next</span>
+ </a>
+
+ <!-- end of next buttons  -->
+</div>
+
 <!-- About section -->
-  <div class="container-fluid">
-    <div class="jumbotron">
-      <h3 class="text-center font-weight-bold">Hello</h3>
-      <h1 class="display-4 text-center">We are Space</h1>
-        <!-- my means margin top and bottom with 4rem values -->
-      <hr class="my-4 w-25" >
-      <p class="lead text-justify mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. </p>
+<div class="jumbotron">
+  <h3 class="text-center font-weight-bold">Hello</h3>
+  <h1 class="display-4 text-center">We are Space</h1>
+    <!-- my means margin top and bottom with 4rem values -->
+  <hr class="my-4 w-25" >
+  <p class="lead text-justify mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+     exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. </p>
 
-      <!-- Using Card Decks  -->
+  <!-- Using Card Decks  -->
 
-      <div class="card-deck">
-        <div class="card">
-          <div class="card-body">
-             <h1 class="card-title display-1 text-center">200</h1>
-             <h3 class="card-subtitle mb-2 text-center">Workshops Done</h3>
-          </div>
-
-        </div>
-        <div class="card">
-          <div class="card-body">
-             <h1 class="card-title display-1 text-center">50</h1>
-             <h3 class="card-subtitle mb-2 text-center">Events Organized</h3>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-             <h1 class="card-title display-1 text-center">80+</h1>
-             <h3 class="card-subtitle mb-2 text-center">Project Completed</h3>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-             <h1 class="card-title display-1 text-center">15</h1>
-             <h3 class="card-subtitle mb-2 text-center">Happy Partners</h3>
-          </div>
-        </div>
+  <div class="card-deck">
+    <div class="card">
+      <div class="card-body">
+         <h1 class="card-title display-1 text-center">200</h1>
+         <h3 class="card-subtitle mb-2 text-center">Workshops Done</h3>
       </div>
 
-      <!-- End of Card Decks -->
+    </div>
+    <div class="card">
+      <div class="card-body">
+         <h1 class="card-title display-1 text-center">50</h1>
+         <h3 class="card-subtitle mb-2 text-center">Events Organized</h3>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+         <h1 class="card-title display-1 text-center">80+</h1>
+         <h3 class="card-subtitle mb-2 text-center">Project Completed</h3>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+         <h1 class="card-title display-1 text-center">15</h1>
+         <h3 class="card-subtitle mb-2 text-center">Happy Partners</h3>
+      </div>
     </div>
   </div>
+
+  <!-- End of Card Decks -->
+</div>
 
 <!-- End of About -->
 
@@ -298,17 +295,20 @@
 <!-- End of technologies -->
 
 <!-- Beginining of Recent works -->
-<div class="container-fluid">
 
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h4 class="text-center text-success"><strong>Recent Projects</strong></h4>
-      <div class="text-center col-md-8 offset-md-2">
-        <h1>We love what we do, check out some of our latest works</h1>
-        <hr/>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h4 class="text-center text-success"><strong>Recent Projects</strong></h4>
+    <div class="text-center col-md-8 offset-md-2">
+      <h1>We love what we do, check out some of our latest works</h1>
+      <hr/>
     </div>
   </div>
+</div>
+
+<div class="container-fluid">
+
+
 
   <div class="row">
     <div class="col">
@@ -353,19 +353,17 @@
 
 <!--Beginning of Latest News  -->
 
-<div class="container-fluid">
-
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h4 class="text-center text-success"><strong>Latest News</strong></h4>
-      <div class="text-center col-md-8 offset-md-2">
-        <h1>Latest news updates from the team</h1>
-        <hr/>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h4 class="text-center text-success"><strong>Latest News</strong></h4>
+    <div class="text-center col-md-8 offset-md-2">
+      <h1>Latest news updates from the team</h1>
+      <hr/>
     </div>
   </div>
+</div>
 
-
+<div class="container-fluid">
 
   <div class="row">
     <div class="col-md-8 offset-md-2">
@@ -427,22 +425,23 @@
         </div>
     </div>
   </div>
+  <div class="row w-100 my-3"></div>
 </div>
 
 <!-- End of Latest News  -->
 
 <!-- Begining of our clients -->
-
-<div class="container-fluid">
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h4 class="text-center text-success"><strong>Our Clients</strong></h4>
-      <div class="text-center col-md-8 offset-md-2">
-        <h1>Space has been honored to partner up with these clients</h1>
-        <hr/>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h4 class="text-center text-success"><strong>Our Clients</strong></h4>
+    <div class="text-center col-md-8 offset-md-2">
+      <h1>Space has been honored to partner up with these clients</h1>
+      <hr/>
     </div>
   </div>
+</div>
+<div class="container-fluid">
+
 
  <div class="row">
    <div class="col-md-8 offset-md-2">
@@ -459,8 +458,7 @@
        <div class="card">
          <img class="card-img-top" src="clients/joomla.png" alt="Card image cap">
        </div>
-     </div>
-     <div class="card-group">
+       <div class="w-100"></div>
        <div class="card">
          <img class="card-img-top" src="clients/apple.png" alt="Card image cap">
        </div>
@@ -484,7 +482,7 @@
    <div class="col-md-8 offset-md-2">
      <div id="quote-carousel" class="carousel slide" data-ride="carousel">
 
-       <ol class="carousel-indicators">
+       <ol class="carousel-indicators ">
            <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
            </li>
            <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
@@ -508,7 +506,7 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante</p>
-             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+             <footer class="blockquote-footer my-3">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
             </div>
             </div>
@@ -523,7 +521,7 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante</p>
-             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+             <footer class="blockquote-footer my-3">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
             </div>
             </div>
@@ -538,7 +536,7 @@
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+             <footer class="blockquote-footer my-3">Someone famous in <cite title="Source Title">Source Title</cite></footer>
             </blockquote>
             </div>
             </div>
@@ -566,17 +564,19 @@
 <!--End of our clients -->
 
 <!-- Begining of our team -->
-<div class="container-fluid">
 
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h4 class="text-center text-success"><strong>Who we all are</strong></h4>
-      <div class="text-center col-md-8 offset-md-2">
-        <h1>We are having a great team here...</h1>
-        <hr/>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h4 class="text-center text-success"><strong>Who we all are</strong></h4>
+    <div class="text-center col-md-8 offset-md-2">
+      <h1>We are having a great team here...</h1>
+      <hr/>
     </div>
   </div>
+</div>
+
+<div class="container-fluid">
+
 
   <div class="row">
 
@@ -649,6 +649,7 @@
       </div>
 
     </div>
+    <div class="w-100 mb-5"></div>
 
 
   </div>
@@ -659,17 +660,19 @@
 </div>
 <!-- End of our team -->
 
-<div class="container-fluid my-5">
-
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h4 class="text-center text-success"><strong>Reach Us</strong></h4>
-      <div class="text-center col-md-8 offset-md-2">
-        <h1>We are always happy to support...</h1>
-        <hr/>
-      </div>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h4 class="text-center text-success"><strong>Reach Us</strong></h4>
+    <div class="text-center col-md-8 offset-md-2">
+      <h1>We are always happy to support...</h1>
+      <hr/>
     </div>
   </div>
+</div>
+
+<div class="container-fluid my-5">
+
+
 
   <div class="row">
     <div class="col-md-8 offset-md-2">
@@ -749,63 +752,59 @@
 
 
 <!--Begining of Footer  -->
-<div class="container-fluid">
 
-
-
-  <div class="card-group text-white text-justify">
-    <div class="card  bg-dark">
-      <div class="card-body">
-        <h5 class="card-title">Mission</h5>
-        <blockquote class="blockquote"><p class="card-text">Promoting free knowledge and free technology across society to help build a free world and a better tomorrow. </p></blockquote>
-      </div>
-    </div>
-    <div class="card bg-dark">
-      <div class="card-body">
-        <h5 class="card-title">Vision</h5>
-        <p class="card-text"> <ul class="list-unstyled">
-          <li>A Free world : Where knowledge is free</li>
-          <li>Where the mind is without fear and the head is held high</li>
-          <li>Where the world has not been broken up into fragments
-          by narrow domestic walls.</li> </ul></p>
-      </div>
-
-    </div>
-    <div class="card bg-dark">
-      <div class="card-body">
-        <h5 class="card-title">Stay Connected</h5>
-        <p class="card-text">Subscribe to our mailing list and thereby receive our newsletter, updates and much more...</p>
-
-        <form class="form-inline">
-          <div class="form-group mx-sm-3">
-            <input type="password" class="form-control" id="inputPassword2" placeholder="Email">
-          </div>
-          <button type="submit" class="btn btn-success">Subscribe</button>
-        </form>
-      </div>
+<div class="card-group text-white text-justify">
+  <div class="card  bg-dark">
+    <div class="card-body">
+      <h5 class="card-title">Mission</h5>
+      <blockquote class="blockquote"><p class="card-text">Promoting free knowledge and free technology across society to help build a free world and a better tomorrow. </p></blockquote>
     </div>
   </div>
+  <div class="card bg-dark">
+    <div class="card-body">
+      <h5 class="card-title">Vision</h5>
+      <p class="card-text"> <ul class="list-unstyled">
+        <li>A Free world : Where knowledge is free</li>
+        <li>Where the mind is without fear and the head is held high</li>
+        <li>Where the world has not been broken up into fragments
+        by narrow domestic walls.</li> </ul></p>
+    </div>
 
-  <div class="card text-white bg-dark">
+  </div>
+  <div class="card bg-dark">
+    <div class="card-body">
+      <h5 class="card-title">Stay Connected</h5>
+      <p class="card-text">Subscribe to our mailing list and thereby receive our newsletter, updates and much more...</p>
 
-  <div class="card-body row ">
-
-    <div class="col">
-      <a href="#" class="card-link text-secondary">Quick Links:</a>
-       <a href="#" class="card-link text-info">HackerSpace</a>
-       <a href="#" class="card-link text-info">Insight</a>
-       <a href="#" class="card-link text-info">Free Electron</a>
-       <a href="#" class="card-link text-info">Blog</a>
-       <a href="#" class="card-link text-info">Gallery</a>
-       <a href="#" class="card-link text-info">Login</a>
-       &nbsp;&nbsp; |&nbsp;&nbsp; Registered Non Profit Organization
-        &nbsp;&nbsp;  |&nbsp;&nbsp; All Rights Reversed &copy; SPACE-KERALA
-     </div>
-
-</div>
+      <form class="form-inline">
+        <div class="form-group mx-sm-3">
+          <input type="password" class="form-control" id="inputPassword2" placeholder="Email">
+        </div>
+        <button type="submit" class="btn btn-success">Subscribe</button>
+      </form>
+    </div>
   </div>
 </div>
+
+<div class="card text-white bg-dark">
+
+<div class="card-body row ">
+
+  <div class="col">
+    <a href="#" class="card-link text-secondary">Quick Links:</a>
+     <a href="#" class="card-link text-info">HackerSpace</a>
+     <a href="#" class="card-link text-info">Insight</a>
+     <a href="#" class="card-link text-info">Free Electron</a>
+     <a href="#" class="card-link text-info">Blog</a>
+     <a href="#" class="card-link text-info">Gallery</a>
+     <a href="#" class="card-link text-info">Login</a>
+     &nbsp;&nbsp; |&nbsp;&nbsp; Registered Non Profit Organization
+      &nbsp;&nbsp;  |&nbsp;&nbsp; All Rights Reversed &copy; SPACE-KERALA
+   </div>
+
+ </div>
 </div>
+
 <!-- End of footer  -->
 
 <!-- End of contact us -->
